objects/realtime_Callout_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>the settings for connections to the Realtime system</description>
    <fields>
        <fullName>Certificate_name__c</fullName>
        <description>The Public name of the SSL sertificate used in this org</description>
        <label>Certificate name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Traffic_Cop_Org_Name__c</fullName>
        <description>The routing name in the Realtime configuration</description>
        <label>Traffic Cop Org Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>is this configuration active</description>
        <label>active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>endpoint_url__c</fullName>
        <description>SOAP endpoint for the realtime process</description>
        <label>endpoint url</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Real-Time Callout Settings</label>
</CustomObject>